<resources>
    <string name="app_name">allinone</string>
    <string name="app_id">56065ce8</string>
    <string name="wakeup_parse_error">唤醒内容解析出错</string>
    <string name="wakeup_invalid">唤醒值低于阀值</string>

    <!--micTest-->
    <string name="back_txt">后mic</string>
    <string name="noise_txt">降噪mic</string>
    <string name="speak1_txt">喇叭1</string>
    <string name="speak2_txt">喇叭2</string>
    <string name="forward_txt">前mic</string>
    <string name="left_txt">左mic</string>
    <string name="right_txt">右mic</string>
    <string name="mid_txt">中mic</string>
    <string name="mic5_reset">复位</string>
    <string name="test_state">测试状态：</string>
    <string name="Success">成功</string>
    <string name="Failed">失败</string>
    <string name="start_test">开始测试</string>

</resources>
