<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/speak_mic_1"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@drawable/light_white"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/speak1_txt"/>
        <ImageView
            android:id="@+id/speak_mic_2"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@drawable/light_white"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/speak2_txt"/>
        <Button
            android:id="@+id/reset_btn"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="@string/mic5_reset"
            android:textSize="15sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#FFEA0C2D"
            android:text="@string/test_state"/>
        <TextView
            android:id="@+id/test_state_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="center">

        <ImageView
            android:id="@+id/back_mic"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@drawable/light_white"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back_txt"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="60dp"
                android:text="@string/left_txt"/>
            <ImageView
                android:id="@+id/left_mic"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@drawable/light_white"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">

            <ImageView
                android:id="@+id/mid_lamp"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@drawable/light_white"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mid_txt"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center">

            <ImageView
                android:id="@+id/right_mic"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@drawable/light_white"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="60dp"
                android:text="@string/right_txt"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:layout_gravity="center">
        <ImageView
            android:id="@+id/forward_mic"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@drawable/light_white"/>
        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forward_txt"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="bottom"
        android:orientation="horizontal" >

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="button001"
            android:text="@string/Success"
            android:textSize="20.0dip" />
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="button002"
            android:text="@string/Failed"
            android:textSize="20.0dip" />
        <Button
            android:id="@+id/record_test"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/start_test"
            android:textSize="20.0dip" />
    </LinearLayout>
</LinearLayout>
